PCF NodeJS to Kubernetes/nodejs-prj/deploy/yamls/cfnodejsapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: cfnodejsapp
  name: cfnodejsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      move2kube.konveyor.io/service: cfnodejsapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: cfnodejsapp
      name: cfnodejsapp
    spec:
      containers:
        - env:
            - name: VCAP_SERVICES
              valueFrom:
                secretKeyRef:
                  key: VCAP_SERVICES
                  name: cfnodejsapp-vcapasenv
            - name: VCAP_APPLICATION
              valueFrom:
                secretKeyRef:
                  key: VCAP_APPLICATION
                  name: cfnodejsapp-vcapasenv
            - name: TEST_ENV
              value: test-env-value
            - name: BLUEMIX_REGION
              value: region
          image: quay.io/nodejs-prj/cfnodejsapp:latest
          imagePullPolicy: Always
          name: cfnodejsapp
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: 1024M
              memory: 256M
      restartPolicy: Always
      securityContext: {}
status: {}
